protos/src/client/snapshots/airprotos__client__self_group__test__account_deleted_stability.snap
---
source: protos/src/client/self_group.rs
expression: diag
---
a1    # map(1)
   05 #   unsigned(5)
   a0 #   map(0)
