protos/src/client/snapshots/airprotos__client__self_group__test__blocked_contacts_update_stability.snap
---
source: protos/src/client/self_group.rs
expression: diag
---
a1                                                 # map(1)
   01                                              #   unsigned(1)
   82                                              #   array(2)
      a1                                           #     map(1)
         01                                        #       unsigned(1)
         a3                                        #       map(3)
            01                                     #         unsigned(1)
            a2                                     #         map(2)
               01                                  #           unsigned(1)
               50                                  #           bytes(16)
                  00000000000000000000000000000001 #             "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x01"
               02                                  #           unsigned(2)
               6b                                  #           text(11)
                  6578616d706c652e636f6d           #             "example.com"
            02                                     #         unsigned(2)
            1a 6955b900                            #         unsigned(1,767,225,600)
            03                                     #         unsigned(3)
            65                                     #         text(5)
               416c696365                          #           "Alice"
      a1                                           #     map(1)
         02                                        #       unsigned(2)
         a1                                        #       map(1)
            01                                     #         unsigned(1)
            a2                                     #         map(2)
               01                                  #           unsigned(1)
               50                                  #           bytes(16)
                  00000000000000000000000000000002 #             "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02"
               02                                  #           unsigned(2)
               6b                                  #           text(11)
                  6578616d706c652e636f6d           #             "example.com"
