protos/src/client/snapshots/airprotos__client__self_group__test__deleted_messages_stability.snap
---
source: protos/src/client/self_group.rs
expression: diag
---
a1                                        # map(1)
   01                                     #   unsigned(1)
   82                                     #   array(2)
      58 20                               #     bytes(32)
         00000000000000000000000000000000 #       "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
         00000000000000000000000000000000 #       "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
      58 20                               #     bytes(32)
         01010101010101010101010101010101 #       "\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01"
         01010101010101010101010101010101 #       "\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01\x01"
