protos/src/client/snapshots/airprotos__client__self_group__test__self_group_app_message_stability.snap
---
source: protos/src/client/self_group.rs
expression: diag
---
87                                              # array(7)
   50                                           #   bytes(16)
      00000000000000000000000000000000          #     "\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00"
   f6                                           #   null, simple(22)
   40                                           #   bytes(0)
                                                #     ""
   f6                                           #   null, simple(22)
   f6                                           #   null, simple(22)
   a1                                           #   map(1)
      20                                        #     negative(-1)
      a1                                        #     map(1)
         01                                     #       unsigned(1)
         a4                                     #       map(4)
            01                                  #         unsigned(1)
            01                                  #         unsigned(1)
            02                                  #         unsigned(2)
            58 20                               #         bytes(32)
               abababababababababababababababab #           "\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab"
               abababababababababababababababab #           "\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab"
            03                                  #         unsigned(3)
            19 02a7                             #         unsigned(679)
            04                                  #         unsigned(4)
            83                                  #         array(3)
               00                               #           unsigned(0)
               03                               #           unsigned(3)
               07                               #           unsigned(7)
   83                                           #   array(3)
      00                                        #     unsigned(0)
      60                                        #     text(0)
                                                #       ""
      00                                        #     unsigned(0)
