protos/src/client/snapshots/airprotos__client__self_group__test__token_seed_stability.snap
---
source: protos/src/client/self_group.rs
expression: diag
---
a3                                     # map(3)
   01                                  #   unsigned(1)
   01                                  #   unsigned(1)
   02                                  #   unsigned(2)
   58 20                               #   bytes(32)
      abababababababababababababababab #     "\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab"
      abababababababababababababababab #     "\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab\xab"
   03                                  #   unsigned(3)
   58 20                               #   bytes(32)
      cdcdcdcdcdcdcdcdcdcdcdcdcdcdcdcd #     "\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd"
      cdcdcdcdcdcdcdcdcdcdcdcdcdcdcdcd #     "\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd\xcd"
